...
                    }
                }
                
            }
            .padding()
        }
        .accessibilityIdentifier("recipeDetailsScrollView")
    }
}

